force-app/main/default/objects/TimeSlot__c/TimeSlot__c.object-meta.xml
<CustomObject>
    <label>Time Slot Master</label>
    <nameField>
        <displayFormat>TSM-{00000}</displayFormat>
        <label>Time Slot Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Slot Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>