force-app/main/default/objects/TimeSlot__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Time Slot Master</relationshipLabel>
    <relationshipName>Time_Slot_Master</relationshipName>
    <type>Lookup</type>
</CustomField>