force-app/main/default/objects/TimeSlot__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>End</description>
    <label>EndTime</label>
    <type>Time</type>
</CustomField>