force-app/main/default/objects/TimeSlot__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this time slot to a specific vehicle from the inventory for vehicle-specific scheduling</description>
    <inlineHelpText>Select the vehicle from your inventory if this time slot is specific to a particular vehicle. Leave blank for general time slots that can be used for any vehicle.</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Time Slots</relationshipLabel>
    <relationshipName>TimeSlots</relationshipName>
    <type>Lookup</type>
</CustomField>