force-app/main/default/objects/TimeSlot__c/fields/VehicleProduct__c.field-meta.xml
<CustomField>
    <fullName>VehicleProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If vehicle-specific</description>
    <label>Vehicle Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Time Slot Master</relationshipLabel>
    <relationshipName>Time_Slot_Master</relationshipName>
    <type>Lookup</type>
</CustomField>